--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,6 +80,7 @@
                     android:text="@string/text_register"
                     android:textSize="16sp"/>
             <Button
+                    android:id="@+id/btn_login_local"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
