--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -37,6 +37,7 @@
                         android:layout_marginStart="32dp"/>
             </LinearLayout>
             <ImageView
+                    android:id="@+id/img_portrait_my"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:padding="20dp"/>
