--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,6 +5,31 @@
              android:layout_height="match_parent"
               android:orientation="vertical"
              tools:context=".ScheduleFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/edt_test_c"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/btn_test_addc"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="添加清单"/>
+        </LinearLayout>
+            <Button
+                android:id="@+id/btn_test_printc"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="打印清单"/>
 
-
+    </LinearLayout>
 </LinearLayout>
