1.尝试抄轮子，但是失败了

--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".UserDetailActivity">
+        tools:context=".view.UserDetailActivity">
         <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
