--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".MyFragment">
+             tools:context=".view.MyFragment">
     <!--登录顶栏-->
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
