--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".ScheduleFragment">
+             tools:context=".view.ScheduleFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
