--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".view.MainActivity">
+        tools:context=".view.page.MainActivity">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:baselineAligned="false">
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginStart="64dp">
+            <TextView
+                    android:id="@+id/tbx_main_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp"
+                    android:text="@string/title_home"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="64dp"
+                android:layout_height="match_parent"/>
+    </LinearLayout>
+
     <LinearLayout
             android:id="@+id/contentView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
-            ></LinearLayout>
+    />
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
