--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,32 +4,85 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".view.ScheduleFragment">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <LinearLayout
+             tools:context=".view.page.ScheduleFragment">
+    <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-            <EditText
-                android:id="@+id/edt_test_c"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
-            <Button
-                android:id="@+id/btn_test_addc"
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:text="添加清单"/>
-        </LinearLayout>
-            <Button
-                android:id="@+id/btn_test_printc"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp">
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="打印清单"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="我的日程清单"
+            />
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorNormal"
+                    android:layout_marginStart="16dp"/>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="4dp"
+                        android:orientation="horizontal">
+                    <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="match_parent"
+                            android:padding="8dp"
+                            android:tint="@color/colorAccent"
+                            android:src="@drawable/ic_timelapse_black_24dp"/>
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:layout_marginStart="16dp"
+                            android:textSize="16sp"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:text="学习"
+                            android:gravity="center_vertical"/>
+                    <TextView
+                            android:layout_width="36dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="3"/>
+                    <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="match_parent"
+                            android:padding="6dp"
+                            android:src="@drawable/ic_chevron_right_normal_24dp"
+                            android:gravity="center"/>
+                </LinearLayout>
 
-    </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="8dp">
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="32dp"
+                        android:layout_marginVertical="8dp"
+                        android:background="@drawable/shape_dash">
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="添加日程清单"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
