--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+            android:id="@+id/navigation_home"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/title_home">
+
+    </item>
+    <item
             android:id="@+id/navigation_schedule"
             android:icon="@drawable/ic_timelapse_black_24dp"
             android:title="@string/title_schedule"/>
