--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -11,7 +11,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/activity_vertical_margin"/>
+                android:layout_margin="16dp"/>
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
