--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,37 +5,115 @@
              android:layout_height="match_parent"
               android:orientation="vertical"
              tools:context=".view.page.ScheduleFragment">
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginHorizontal="16dp"-->
+            <!--android:layout_marginTop="16dp">-->
+        <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="vertical">-->
+            <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginVertical="8dp"-->
+                    <!--android:layout_marginStart="16dp"-->
+                    <!--android:text="我的日程清单"-->
+            <!--/>-->
+            <!--<View-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="1dp"-->
+                    <!--android:background="@color/colorNormal"-->
+                    <!--android:layout_marginStart="16dp"/>-->
+            <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="48dp"-->
+                    <!--android:layout_marginTop="8dp"-->
+                    <!--android:orientation="horizontal">-->
+                <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_marginHorizontal="16dp"-->
+                        <!--android:layout_marginVertical="4dp"-->
+                        <!--android:orientation="horizontal">-->
+                    <!--<ImageView-->
+                            <!--android:layout_width="40dp"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:padding="8dp"-->
+                            <!--android:tint="@color/colorAccent"-->
+                            <!--android:src="@drawable/ic_timelapse_black_24dp"/>-->
+                    <!--<TextView-->
+                            <!--android:layout_width="0dp"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:layout_marginStart="16dp"-->
+                            <!--android:textSize="16sp"-->
+                            <!--android:textColor="@color/colorPrimaryDark"-->
+                            <!--android:text="学习"-->
+                            <!--android:gravity="center_vertical"/>-->
+                    <!--<ImageView-->
+                            <!--android:layout_width="16dp"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:tint="@color/colorDisplay"-->
+                            <!--android:src="@drawable/ic_notifications_black_24dp"-->
+                            <!--/>-->
+                    <!--<TextView-->
+                            <!--android:layout_width="24dp"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:layout_marginStart="4dp"-->
+                            <!--android:text="99+"/>-->
+                    <!--<ImageView-->
+                            <!--android:layout_width="32dp"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:tint="@color/colorDisplay"-->
+                            <!--android:padding="6dp"-->
+                            <!--android:src="@drawable/ic_chevron_right_black_24dp"-->
+                            <!--android:gravity="center"/>-->
+                <!--</LinearLayout>-->
+
+            <!--</LinearLayout>-->
+            <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="48dp"-->
+                    <!--android:layout_marginBottom="8dp">-->
+                <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_marginHorizontal="32dp"-->
+                        <!--android:layout_marginVertical="8dp"-->
+                        <!--android:background="@drawable/shape_dash">-->
+                    <!--<TextView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="添加日程清单"/>-->
+                <!--</LinearLayout>-->
+            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
+    <!--</android.support.v7.widget.CardView>-->
+    <com.example.ttymyday.view.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp">
+            android:layout_margin="16dp"
+            app:display_title="我的日程清单">
+        <!--展示内容的容器-->
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
                 android:orientation="vertical">
-            <TextView
+            <FrameLayout
+                    android:id="@+id/test_schedule_item1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:text="我的日程清单"
-            />
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorNormal"
-                    android:layout_marginStart="16dp"/>
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal">
+                    android:paddingStart="16dp"
+                    android:paddingEnd="0dp"
+                    android:paddingVertical="4dp">
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginVertical="4dp"
                         android:orientation="horizontal">
                     <ImageView
                             android:layout_width="40dp"
@@ -52,24 +130,76 @@
                             android:textColor="@color/colorPrimaryDark"
                             android:text="学习"
                             android:gravity="center_vertical"/>
-                    <TextView
-                            android:layout_width="36dp"
+                    <ImageView
+                            android:layout_width="16dp"
                             android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="3"/>
+                            android:tint="@color/colorDisplay"
+                            android:src="@drawable/ic_notifications_black_24dp"
+                    />
+                    <TextView
+                            android:layout_width="24dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:layout_marginStart="4dp"
+                            android:text="99+"/>
                     <ImageView
                             android:layout_width="32dp"
                             android:layout_height="match_parent"
+                            android:tint="@color/colorDisplay"
                             android:padding="6dp"
-                            android:src="@drawable/ic_chevron_right_normal_24dp"
+                            android:src="@drawable/ic_chevron_right_black_24dp"
                             android:gravity="center"/>
                 </LinearLayout>
-
-            </LinearLayout>
+            </FrameLayout>
+            <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="0dp"
+                    android:paddingVertical="4dp">
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                    <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="match_parent"
+                            android:padding="8dp"
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_timelapse_black_24dp"/>
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:layout_marginStart="16dp"
+                            android:textSize="16sp"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:text="重要日程"
+                            android:gravity="center_vertical"/>
+                    <ImageView
+                            android:layout_width="16dp"
+                            android:layout_height="match_parent"
+                            android:tint="@color/colorDisplay"
+                            android:src="@drawable/ic_notifications_black_24dp"
+                    />
+                    <TextView
+                            android:layout_width="24dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:layout_marginStart="4dp"
+                            android:text="12+"/>
+                    <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="match_parent"
+                            android:tint="@color/colorDisplay"
+                            android:padding="6dp"
+                            android:src="@drawable/ic_chevron_right_black_24dp"
+                            android:gravity="center"/>
+                </LinearLayout>
+            </FrameLayout>
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginBottom="8dp">
+                    android:layout_height="48dp">
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -84,5 +214,5 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </com.example.ttymyday.view.widget.CardView>
 </LinearLayout>
