设计添加日程列表
1.设计了添加日程列表的UI
2.学习使用了RecycerView的Adapter和LayoutManager.
3.学习了事件的传递

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorDisplay">#AAAAAA</color>
     <color name="colorNormal">#CCCCCC</color>
+    <color name="colorHoverGray">#22000000</color>
 </resources>
