--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -110,7 +110,8 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="16dp"
                     android:paddingEnd="0dp"
-                    android:paddingVertical="4dp">
+                    android:paddingVertical="4dp"
+                    android:clickable="true">
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -119,8 +120,7 @@
                             android:layout_width="40dp"
                             android:layout_height="match_parent"
                             android:padding="8dp"
-                            android:tint="@color/colorAccent"
-                            android:src="@drawable/ic_timelapse_black_24dp"/>
+                            android:src="@drawable/ic_color_info"/>
                     <TextView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -197,22 +197,24 @@
                             android:gravity="center"/>
                 </LinearLayout>
             </FrameLayout>
-            <LinearLayout
+            <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="48dp">
-                <LinearLayout
+                <FrameLayout
+                        android:id="@+id/btn_schedule_add_book"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginHorizontal="32dp"
                         android:layout_marginVertical="8dp"
-                        android:background="@drawable/shape_dash">
+                        android:background="@drawable/shape_dash"
+                        android:clickable="true">
                     <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="添加日程清单"/>
-                </LinearLayout>
-            </LinearLayout>
+                            android:text="@string/text_add_schedulebook"/>
+                </FrameLayout>
+            </FrameLayout>
         </LinearLayout>
     </com.example.ttymyday.view.widget.CardView>
 </LinearLayout>
