--- a/app/src/main/res/layout/add_schedule_book_fragment.xml
+++ b/app/src/main/res/layout/add_schedule_book_fragment.xml
@@ -16,28 +16,32 @@
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal">
             <ImageView
+                    android:id="@+id/img_icon_add_schedule_book"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:padding="8dp"
-                    android:src="@drawable/ic_emoji_black_24dp"/>
+                    android:src="@drawable/ic_color_adduser"/>
             <EditText
+                    android:id="@+id/edt_title_add_schedule_book"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:layout_marginStart="16dp"
+                    android:maxLines="1"
+                    android:inputType="text"
                     android:hint="@string/text_add_scheduletitle"/>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_icon_add_schedule_book"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="160dp"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"/>
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginHorizontal="16dp" >
             <Button
@@ -50,6 +54,7 @@
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:text="取消"/>
             <Button
+                    android:enabled="false"
                     android:id="@+id/btn_ok_add_schedule_book"
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -57,7 +62,7 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:layout_margin="1dp"
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorNormal"
 
                     android:text="确认添加"/>
         </LinearLayout>
