--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,11 @@
                 android:layout_height="match_parent"/>
     </LinearLayout>
 
-    <LinearLayout
+    <com.example.ttymyday.view.widget.MViewPager
             android:id="@+id/contentView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical"
     />
 
     <android.support.design.widget.BottomNavigationView
