--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -61,7 +61,7 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="60dp"
                 android:layout_marginVertical="16dp"
-                android:text="@string/text_exitlogin">
+                android:text="@string/text_exitLogin">
 
         </Button>
 </LinearLayout>
