开始编写日程

--- a/app/src/main/res/layout/activity_normal_schedule.xml
+++ b/app/src/main/res/layout/activity_normal_schedule.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container_main"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".view.page.MainActivity">
-
+        tools:context=".view.page.NormalScheduleActivity">
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="64dp"
@@ -32,19 +30,4 @@
                 android:layout_width="64dp"
                 android:layout_height="match_parent"/>
     </LinearLayout>
-
-    <com.example.ttymyday.view.widget.MViewPager
-            android:id="@+id/contentView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-    />
-
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation"/>
-
 </LinearLayout>
