--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,25 +12,16 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:baselineAligned="false">
-        <LinearLayout
-                android:layout_width="0dp"
+            android:baselineAligned="false"
+            android:paddingTop="16dp">
+        <TextView
+                android:id="@+id/tbx_main_title"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginStart="64dp">
-            <TextView
-                    android:id="@+id/tbx_main_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp"
-                    android:text="@string/title_home"/>
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width="64dp"
-                android:layout_height="match_parent"/>
+                android:gravity="center"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp"
+                android:text="@string/title_home"/>
     </LinearLayout>
 
     <com.example.ttymyday.view.widget.MViewPager
