--- a/app/src/main/res/layout/activity_normal_schedule.xml
+++ b/app/src/main/res/layout/activity_normal_schedule.xml
@@ -10,24 +10,79 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:baselineAligned="false">
-        <LinearLayout
+            android:baselineAligned="false"
+            android:paddingTop="8dp">
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:id="@+id/img_back_normal_schedule"
+                    android:background="@drawable/bg_ripple"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_chevron_left"
+                    android:padding="8dp"
+                    android:clickable="true">
+            </ImageView>
+        <ImageView
+                android:id="@+id/img_icon_normal"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_color_info"/>
+        <TextView
+                android:id="@+id/tbx_title_normal"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:layout_marginStart="64dp">
-            <TextView
-                    android:id="@+id/tbx_main_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp"
-                    android:text="@string/title_home"/>
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width="64dp"
-                android:layout_height="match_parent"/>
+                android:gravity="center_vertical"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp"
+                android:text="@string/title_mySchedule"/>
+        <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/img_collaborator_normal_schedule"
+                android:background="@drawable/bg_ripple"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_share"
+                android:padding="10dp"
+                android:clickable="true">
+        </ImageView>
+        <TextView
+                android:id="@+id/tbx_user_normal"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:text="88"
+                android:gravity="center"/>
+        <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:id="@+id/img_more_normal_schedule"
+                android:background="@drawable/bg_ripple"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_more_vert"
+                android:padding="8dp"
+                android:clickable="true">
+        </ImageView>
     </LinearLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                app:fabSize="auto"
+                android:src="@drawable/ic_add_black"
+                android:tint="@color/colorLight"
+                android:layout_margin="16dp"/>
+    </RelativeLayout>
 </LinearLayout>
