--- a/app/src/main/res/layout/sample_schedule_tag_view.xml
+++ b/app/src/main/res/layout/sample_schedule_tag_view.xml
@@ -27,20 +27,13 @@
             android:textColor="@color/colorPrimaryDark"
             android:text="学习"
             android:gravity="center_vertical"/>
-    <ImageView
-            android:id="@+id/img_alarm_schedule_tag"
-            android:layout_width="16dp"
-            android:layout_height="match_parent"
-            android:tint="@color/colorDisplay"
-            android:src="@drawable/ic_notifications_black_24dp"
-    />
     <TextView
             android:id="@+id/tbx_alarm_count_schedule_tag"
-            android:layout_width="24dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_marginStart="4dp"
-            android:text="99+"/>
+            android:layout_marginEnd="8dp"
+            android:text="7"/>
     <ImageView
             android:layout_width="32dp"
             android:layout_height="match_parent"
