--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#DC7633</color>
+    <color name="colorLight">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDisplay">#AAAAAA</color>
     <color name="colorNormal">#CCCCCC</color>
